--- a/CSS/estilos.css
+++ b/CSS/estilos.css
@@ -1,7 +1,24 @@
 body
 {
-        color: rgb(72, 49, 202);
+        color: #333;
         text-align: center;
-        front-familiy: "Arial"
+        font-family: "Arial";
+        font-size: 16px;
+        margin: 0;
+        padding: 0;
 
+}
+#container
+{
+    width: 70%;
+    padding; 1em;
+    text-align: :left;
+    border: 1px solid #ddd;
+    margin: 0 auto;
+
+}
+
+#container h1
+{
+        font-size: 20px;
 }
